# Physical-AI-Humanoid-Robotics-Textbook

./: GEMINI.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
01-setup/: pyproject.toml
02-parts/01-Part-I-Foundations/01-Chapter-Physical-AI/: 01-Intro.md  02-Architecture.md
02-parts/02-Part-II-Modules/01-Module-Robotic-Nervous-System/: README.md
02-parts/02-Part-II-Modules/02-Module-Digital-Twin/: README.md
02-parts/02-Part-II-Modules/03-Module-AI-Robot-Brain/: README.md
02-parts/02-Part-II-Modules/04-Module-Vision-Language-Action/: README.md
backend/: app.py  ingest_content.py
docs/: intro.md
docs/Part-I-Foundations/: Week-1-Introduction-to-Physical-AI.md  intro.md
docs/Part-I-Foundations/ROS-2/: intro.md
docs/Part-II-Digital-Twins/: intro.md
docs/Part-II-Digital-Twins/Gazebo/: intro.md
docs/Part-III-NVIDIA-Isaac/: intro.md
docs/Part-III-NVIDIA-Isaac/Isaac-Sim/: intro.md
docs/Part-IV-VLA-Humanoid/: intro.md
docs/Part-IV-VLA-Humanoid/VLA/: intro.md
history/prompts/constitution/: 001-initial-constitution-setup.constitution.prompt.md
src/: main.py
src/components/HomepageFeatures/: index.tsx  styles.module.css
src/css/: custom.css
src/pages/: index.module.css  index.tsx
static/: styles.css
templates/: markdown_page.html
